# nextcomp_data_reduction_suite

./: .gitignore  CHANGELOG.md  GUIDELINES.md  NOTICE.md  README.md  build_dist_pyinstaller.bat  mtdp_enrichment.spec  pyproject.toml  requirements-pyinstaller.txt  requirements.txt
config/: method_registry.yaml
datasets/: README.md
datasets/BZ_Compression_20250325/: A3.csv  B1.csv  a10.csv  a2.csv  a4.csv  a6.csv  a8.csv  b3.csv  b5.csv  b9.csv
datasets/Compression/: CAG-CF-Modied-ULV20-E1.csv  CAG-CF-Modied-ULV20-E1.yaml  CAG-CF-Modied-ULV20-E2.csv  CAG-CF-Modied-ULV20-E2.yaml  (+10 more)
docs/: HELP.md  method_run_wizard.md
docs/mtda/: README.md
mappings/: iso14126_manual.json  iso14126_manual_wizard_edit_14.json
schemas/: experiment_boundary_record.schema.json  plot_projection_recipe.schema.json
templates/: AUDIT_BLOCK_JSON_EXAMPLE.json  STAGE_26_STAGE_RECORD_TEMPLATE.md  audit_block_contract.schema.yaml  curve_aggregation_policy_patch.yaml  iso14126_audit_block_layout.patch.yaml  mtda_artifact_contract.patch.yaml  operation_evidence_contract.schema.yaml  procedure_evidence_index.schema.json  resolve_recipe_patch.yaml  surface_role_map.yaml  wizard_page_role_contracts.yaml
tests/: ACCEPTANCE_MATRIX.md  ACCEPTANCE_MATRIX.yaml  TEST_PLAN.md  TEST_SPECIFICATIONS.md  conftest.py
tools/: ParsedSampleRecord_datastructure.md  boundary_labeller.py  build_rc.py  export_mtda.py  finalize_mtda.py  harvest_gui_views.py  inspect_parse.py  mtda_plot_studio_alignment.py  print_parser_datastructure.py  run_method_development.py  run_method_manual.py  run_parser_smoke_test.py
(+771 files in other folders)
