[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nextcomp-data-reduction-suite"
version = "1.1.0"
description = "Desktop data-reduction suite for compression-test MTDP packaging, ISO 14126 method execution, and MTDA report review."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "Jinja2>=3.1",
  "MarkupSafe>=2.1",
  "PySide6>=6.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "Pillow>=10",
  "pytest>=8",
]
legacy-qt = [
  "PyQt6>=6.6",
]
units = [
  "Pint>=0.23",
]

[project.scripts]
nextcomp-suite = "mtdp_enrichment.react_shell_app:main"
mtdp-enrichment = "mtdp_enrichment.react_shell_app:main"
mtdp-enrichment-legacy = "mtdp_enrichment.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mtdp_enrichment = [
  "schema_library/**/*.yaml",
  "schema_library/**/*.yml",
  "schema_library/**/*.json",
  "assets/icons/*",
  "assets/logos/*",
]
methods = [
  "**/*.yaml",
  "**/*.yml",
  "**/*.json",
]
html_renderer = [
  "templates/**/*.j2",
]
plotting = [
  "recipes/catalog/*.yaml",
]
